# FizzBuzz

./: FizzBuzz.py  download.json  madlibs.py  templates.txt  test_fizzbuzz.py
BulkFileRenaming/: BulkFile.py
Dynamite-Python-master/: BotTest.py  BotTest2.py  BotTest3.py  pyproject.toml
DynamiteBot/: BotTest.py
FlaskTest/: app.py
FlaskTest/templates/: book_list.html
MadLibsGen/: madlibs.py  templates.txt
MarvelComics/: main.py  pyproject.toml
