[tool.poetry]
name = "dynamite-python-master"
version = "0.1.0"
description = ""
authors = ["Sophia Ho <Sophia.HoMeiYin@softwire.com>"]

[tool.poetry.dependencies]
python = "3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
